--- a/package.json
+++ b/package.json
@@ -1,32 +1,49 @@
 {
-  "name": "svelte-checklist",
-  "description": "A customizable checklist made in Svelte",
-  "version": "0.9.1",
-  "license": "MIT",
-  "author": "Rodrigo Couto",
-  "bugs": {
-    "url": "https://github.com/paulixta-oss/svelte-checklist/issues"
-  },
-  "homepage": "https://github.com/paulixta-oss/svelte-checklist",
-  "svelte": "src/index.js",
-  "module": "dist/index.mjs",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "rollup -c",
-    "prepublishOnly": "npm run build"
-  },
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "rollup": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
-    "svelte": "^3.0.0"
-  },
-  "keywords": [
-    "svelte",
-    "components"
-  ],
-  "files": [
-    "src",
-    "dist"
-  ]
+		"name": "svelte-checklist",
+		"description": "A customizable checklist made in Svelte",
+		"version": "0.9.1",
+		"license": "MIT",
+		"author": "Rodrigo Couto",
+		"bugs": {
+				"url": "https://github.com/paulixta-oss/svelte-checklist/issues"
+		},
+		"homepage": "https://github.com/paulixta-oss/svelte-checklist",
+		"type": "module",
+		"scripts": {
+				"dev": "vite dev",
+				"build": "svelte-kit sync && svelte-package",
+				"test": "playwright test",
+				"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+				"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+				"lint": "prettier --plugin-search-dir . --check . && eslint .",
+				"format": "prettier --plugin-search-dir . --write ."
+		},
+		"devDependencies": {
+				"@playwright/test": "^1.27.0",
+				"@sveltejs/adapter-auto": "next",
+				"@sveltejs/kit": "next",
+				"@sveltejs/package": "next",
+				"@typescript-eslint/eslint-plugin": "^5.39.0",
+				"@typescript-eslint/parser": "^5.39.0",
+				"eslint": "^8.25.0",
+				"eslint-config-prettier": "^8.5.0",
+				"eslint-plugin-svelte3": "^4.0.0",
+				"micromatch": "^4.0.5",
+				"prettier": "^2.7.1",
+				"prettier-plugin-svelte": "^2.7.1",
+				"svelte": "^3.50.1",
+				"svelte-check": "^2.9.1",
+				"svelte-preprocess": "^4.10.7",
+				"tslib": "^2.4.0",
+				"typescript": "^4.8.4",
+				"vite": "^3.1.6"
+		},
+		"keywords": [
+				"svelte",
+				"components"
+		],
+		"files": [
+				"src",
+				"dist"
+		]
 }
